--- a/src/main/webapp/js/app/carrito/plist.html
+++ b/src/main/webapp/js/app/carrito/plist.html
@@ -4,7 +4,7 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1><i class="fas fa-shopping-cart"></i> Carrito</h1>
-                <span id="precioTotal" ng-show="!carritoVacio">Precio total: {{precioProducto}}</span>
+                <span id="precioTotal" ng-show="!carritoVacio">Precio total: {{precioProducto.toFixed(2)}}€</span>
                 <span id="cantidadTotal" ng-show="!carritoVacio">Cantidad de productos: {{cantidadProducto}}</span>
             </div>     
         </main>
@@ -16,7 +16,7 @@
                 <div class="item" ng-repeat="item in ajaxDataCarritoShow track by $index">
                     <div id="itemImagen"><i class="fas fa-cookie-bite" style="font-size: 200px;"><!--aqui iria la foto {{item.obj_Producto.foto}}--></i></div>
                     <div id="itemDesc"><h3>{{item.obj_Producto.desc}}</h3></div>
-                    <div id="itemPrecio">Precio: {{item.obj_Producto.precio}}$</div>
+                    <div id="itemPrecio">Precio: {{item.obj_Producto.precio.toFixed(2)}}€</div>
                     <div id="itemCant">Cantidad: {{item.cantidad}}</div>
                     <div id="itemAdd">
                         <a class="btn btn-success"  ng-click="carrito('add', item.obj_Producto.id, '1')">
