--- a/src/main/webapp/js/app/carrito/plist.html
+++ b/src/main/webapp/js/app/carrito/plist.html
@@ -1,7 +1,7 @@
 <header-component></header-component>
 <div class="container" style="margin-bottom: 100px;">
     <div class="row">
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+        <main role="main" class="col-md-12 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1><i class="fas fa-shopping-cart"></i> Carrito</h1>
                 <span id="precioTotal" ng-show="!carritoVacio">Precio total: {{precioProducto.toFixed(2)}}€</span>
@@ -14,8 +14,8 @@
         <div>
             <div class="items">
                 <div class="item" ng-repeat="item in ajaxDataCarritoShow track by $index">
-                    <div id="itemImagen"><i class="fas fa-cookie-bite" style="font-size: 200px;"><!--aqui iria la foto {{item.obj_Producto.foto}}--></i></div>
-                    <div id="itemDesc"><h3>{{item.obj_Producto.desc}}</h3></div>
+                    <div id="itemImagen"><i class="fas fa-cookie-bite" style="font-size: 120px;"><!--aqui iria la foto {{item.obj_Producto.foto}}--></i></div>
+                    <div id="itemDesc"><h3><a href="producto/view/{{item.obj_Producto.id}}">{{item.obj_Producto.desc}}</a></h3></div>
                     <div id="itemPrecio">Precio: {{item.obj_Producto.precio.toFixed(2)}}€</div>
                     <div id="itemCant">Cantidad: {{item.cantidad}}</div>
                     <div id="itemAdd">
@@ -39,7 +39,7 @@
         </div>
 
 
-        <div class="row justify-content-end" style="margin-top: 30px;">
+        <div class="row justify-content-end" style="margin-top: 30px; margin-right: 30px">
             <div class="col-auto">   
                 <a class="btn btn-danger" ng-click="empty()">
                         <i class="fas fa-trash-alt" > Vaciar carrito</i>
