--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,6 +71,7 @@
         <script src="js/app/usuario/login.js" type="text/javascript"></script>
         <script src="js/app/usuario/logout.js" type="text/javascript"></script>
         <script src="js/app/usuario/plistfactura.js" type="text/javascript"></script>
+        <script src="js/app/usuario/selection.js" type="text/javascript"></script>
         
         <script src="js/app/tipoproducto/plist.js" type="text/javascript"></script>
         <script src="js/app/tipoproducto/view.js" type="text/javascript"></script>
