--- a/src/main/webapp/js/app/factura/create.html
+++ b/src/main/webapp/js/app/factura/create.html
@@ -18,15 +18,19 @@
         <div class="form-group row">
             <label for="fecha" class="col-3 col-form-label">Fecha</label>
             <div class="col-8">
-                <input type="text" class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.fecha.$invalid && !userForm.fecha.$pristine }" id="fecha" name="fecha" ng-model="ajaxDatoFactura.fecha" ng-required="true"/>
-                <div ng-show="userForm.fecha.$invalid && !userForm.fecha.$pristine" class="alert alert-danger" >Fecha requerida.</div>
+                <md-datepicker ng-model="myDate" id="fecha" name="fecha" md-placeholder="Fecha" ng-required="true"
+               ng-class="{ 'is-invalid' : userForm.fecha.$invalid && !userForm.fecha.$pristine, 'is-valid': userForm.fecha.$valid && !userForm.fecha.$pristine}">
+                </md-datepicker>
+                <div ng-show="userForm.fecha.$invalid && !userForm.fecha.$pristine && !userForm.fecha.$error.pattern" class="alert alert-danger" role="alert">
+                    Fecha no válida
+                </div>
             </div>
         </div>
 
         <div class="form-group row">
             <label for="nombre" class="col-3 col-form-label">Iva</label>
             <div class="col-8">
-                <input type="text" class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.iva.$invalid && !userForm.iva.$pristine }" id="iva" name="iva" ng-model="ajaxDatoFactura.iva" ng-required="true" ng-pattern="/^[0-9]+$/"/>
+                <input type="text" class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.iva.$invalid && !userForm.iva.$pristine }" id="iva" name="iva" ng-model="iva" ng-required="true" ng-pattern="/^[0-9]+$/"/>
                 <div ng-show="userForm.iva.$invalid && !userForm.iva.$pristine && !userForm.iva.$error.pattern" class="alert alert-danger" role="alert">
                     Iva obligatorio
                 </div>
