--- a/src/main/webapp/js/app/factura/edit.html
+++ b/src/main/webapp/js/app/factura/edit.html
@@ -24,10 +24,12 @@
 
         <div class="form-group row">
             <label for="fecha" class="col-3 col-form-label">Fecha</label>
-            <div class="col-8">
-                <input type="text" class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.fecha.$invalid && !userForm.fecha.$pristine }" id="fecha" name="fecha" ng-model="ajaxDatoFactura.fecha" ng-required="true"/>
-                <div ng-show="userForm.fecha.$invalid && !userForm.fecha.$pristine" class="alert alert-danger" >Fecha requerida.</div>
-            </div>
+            <md-datepicker ng-model="dt" id="fecha" name="fecha" md-placeholder="Fecha" ng-required="true"
+               ng-class="{ 'is-invalid' : userForm.fecha.$invalid && !userForm.fecha.$pristine, 'is-valid': userForm.fecha.$valid && !userForm.fecha.$pristine}">
+                </md-datepicker>
+                <div ng-show="userForm.fecha.$invalid && !userForm.fecha.$pristine && !userForm.fecha.$error.pattern" class="alert alert-danger" role="alert">
+                    Fecha no válida
+                </div>
         </div>
 
         <div class="form-group row">
